Webfront: Fix overflow of links/contact info vs messages/status.

--- a/subsystem/webFront/src/style/default.css
+++ b/subsystem/webFront/src/style/default.css
@@ -199,8 +199,10 @@ div#footer hr {
 div.boxes {
 	float: right;
 	width: 15em;
+	overflow: hidden;
 }
 div.boxes table {
+	background: white;
 	border-collapse: separate;
 	width: 100%;
 	margin-bottom: 1em;
